Fix issue with inactive Pomodoro icons with z-index.

--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.logo.vite:hover {
-  filter: drop-shadow(0 0 2em #747bff);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafb);
-}
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -18,27 +11,13 @@
   font-weight: 400;
 
   color: #0f0f0f;
-  background-color: #f6f6f6;
+  background-color: #5c3d3d;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-.container {
-  margin: 0;
-  padding-top: 10vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
-
-.row {
-  display: flex;
-  justify-content: center;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -58,205 +37,5 @@
   }
   button:active {
     background-color: #0f0f0f69;
-  }
-}
-
-.ProseMirror {
-  padding: 1rem;
-  outline: none;
-  padding-top: 2.5rem;
-}
-
-.main-editor {
-  background-color: #0c0e09;
-  border-left: 0.1px solid rgb(220, 3, 3);
-  flex: 1;
-  overflow-x: auto;
-}
-
-/* Menu icons */
-.menu {
-  display: flex;
-  gap: 0.5rem;
-  padding: 0 1rem;
-  position: fixed;
-  z-index: 10;
-  padding: 20px;
-}
-
-.group-item {
-  display: flex;
-  gap: 0.5rem;
-}
-
-.menu-item {
-  padding: 0.5rem 0.75rem;
-}
-
-.menu-item .is-active {
-  color: #202f20;
-}
-
-/* editor (via Remixon) */
-.ProseMirror {
-  padding: 1rem;
-  outline: none;
-  padding-top: 2.5rem;
-}
-
-.ProseMirror > * + * {
-  margin-top: 0.75em;
-}
-.ProseMirror ul,
-.ProseMirror ol {
-  padding: 0 1rem;
-}
-.ProseMirror h1,
-.ProseMirror h2,
-.ProseMirror h3,
-.ProseMirror h4,
-.ProseMirror h5,
-.ProseMirror h6 {
-  line-height: 1.1;
-}
-.ProseMirror code {
-  background-color: rgba(97, 97, 97, 0.1);
-  color: #616161;
-}
-.ProseMirror pre {
-  background: #0d0d0d;
-  color: #fff;
-  font-family: "JetBrainsMono", monospace;
-  padding: 0.75rem 1rem;
-  border-radius: 0.5rem;
-}
-.ProseMirror pre code {
-  color: inherit;
-  padding: 0;
-  background: none;
-  font-size: 0.8rem;
-}
-.ProseMirror img {
-  max-width: 100%;
-  height: auto;
-}
-.ProseMirror blockquote {
-  padding-left: 1rem;
-  border-left: 2px solid rgba(13, 13, 13, 0.1);
-}
-.ProseMirror hr {
-  border: none;
-  border-top: 2px solid rgba(13, 13, 13, 0.1);
-  margin: 2rem 0;
-}
-
-.main-editor {
-  background-color: #0c0e09;
-  border-left: 0.1px solid rgba(113, 75, 75, 0.246);
-  flex: 1;
-  overflow-x: auto;
-}
-
-.headline-editor {
-  border-bottom: 0.5px solid rgba(255, 255, 255, 0.146); /* Add a white border */
-  margin-top: 2rem;
-}
-
-.main-editor {
-  background-color: #0c0e09;
-  border-left: 0.1px solid rgba(255, 255, 255, 0.246);
-  flex: 1;
-  overflow-x: auto;
-}
-
-.menu {
-  display: flex;
-  gap: 0.5rem;
-  padding: 0 1rem;
-  position: fixed;
-  z-index: 10;
-  padding: 20px;
-}
-
-.group-item {
-  display: flex;
-  gap: 0.5rem;
-}
-
-.menu-item {
-  padding: 0.5rem 0.75rem;
-}
-
-.menu-item .is-active {
-  color: #55db55;
-}
-
-/**/
-
-.clock {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 500;
-  color: #ffffff;
-  font-size: 1vw;
-  width: 30%;
-}
-
-.timer {
-  width: 100%;
-  height: 10%;
-  align-items: column;
-  display: flex;
-  border: 1px solid #ffffff24;
-}
-
-.timer-tools {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  width: 100%;
-  flex-wrap: wrap;
-  flex: 1 1 auto;
-}
-
-.timer-tools > button {
-  margin: 5px;
-  padding: 15px;
-  flex: 1 1 auto;
-}
-
-.start-timer {
-  background-color: rgba(0, 128, 0, 0.306);
-}
-
-.start-timer:hover,
-.start-timer:active {
-  background-color: green;
-}
-
-.stop-timer {
-  background-color: rgba(211, 214, 32, 0.306);
-}
-
-.stop-timer:hover,
-.stop-timer:active {
-  background-color: yellow;
-}
-
-.reset-timer {
-  background-color: rgba(200, 19, 19, 0.306);
-}
-
-.reset-timer:hover,
-.reset-timer:active {
-  background-color: red;
-}
-
-@media (max-width: 600px) {
-  .timer-tools {
-    flex-direction: column;
   }
 }
